# repopilot

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
eval/: RESULTS.md  swebench_eval.py
examples/: tinydb_issue.md
repopilot/: __init__.py  adapters.py  cli.py  config.py  executor.py  github.py  llm.py  orchestrator.py  permissions.py  planner.py  policy.py  reviewer.py  tools.py  trace.py  verifier.py  workspace.py
tests/: test_adapters.py  test_orchestrator.py  test_tools.py
